[gd_scene format=3 uid="uid://bw4mvdmbadknw"]

[ext_resource type="Script" uid="uid://cq3h0u4551k17" path="res://scenes/game_over_canvas.gd" id="1_qy58y"]
[ext_resource type="Theme" uid="uid://ycq1t7rs350y" path="res://gfx/resouces/default_button_theme.tres" id="2_5pyyf"]
[ext_resource type="LabelSettings" uid="uid://b265jv2ycyte5" path="res://gfx/resouces/title_label_theme.tres" id="2_6alte"]
[ext_resource type="LabelSettings" uid="uid://by45jgrkdnkm2" path="res://gfx/resouces/default_label_settings.tres" id="3_6o7te"]

[node name="GameOverCanvas" type="CanvasLayer" unique_id=1368796674 groups=["game_over_canvas"]]
process_mode = 3
script = ExtResource("1_qy58y")

[node name="StatsContainer" type="Control" parent="." unique_id=1615548767]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsContainerPanel" type="Panel" parent="StatsContainer" unique_id=1297501006]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsPanel" type="Panel" parent="StatsContainer/StatsContainerPanel" unique_id=476513958]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverReasonLabel" type="Label" parent="StatsContainer/StatsContainerPanel/StatsPanel" unique_id=1254037932]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Death"
label_settings = ExtResource("2_6alte")

[node name="DistanceTravelledLabel" type="Label" parent="StatsContainer/StatsContainerPanel/StatsPanel" unique_id=688058377]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.25
anchor_right = 0.1
anchor_bottom = 0.3
text = "Distance Travelled: 0 units"
label_settings = ExtResource("3_6o7te")

[node name="CurrentScoreLabel" type="Label" parent="StatsContainer/StatsContainerPanel/StatsPanel" unique_id=1527783337]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.35
anchor_right = 0.01
anchor_bottom = 0.4
text = "Current Score: 0 points"
label_settings = ExtResource("3_6o7te")

[node name="CurrentHealthLabel" type="Label" parent="StatsContainer/StatsContainerPanel/StatsPanel" unique_id=873740810]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.45
anchor_right = 0.01
anchor_bottom = 0.45
text = "Current Health: 0 Hearts"
label_settings = ExtResource("3_6o7te")

[node name="FinalScoreLabel" type="Label" parent="StatsContainer/StatsContainerPanel/StatsPanel" unique_id=811320880]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.85
anchor_right = 0.01
anchor_bottom = 0.85
text = "Final Score = 0"
label_settings = ExtResource("3_6o7te")

[node name="FinalScoreExplanationLabel" type="Label" parent="StatsContainer/StatsContainerPanel/StatsPanel" unique_id=1431874519]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 0.7
grow_vertical = 2
text = "Final Score Formula = current score + 
    (current health * 500) + 
    10k points if made planetfall"
label_settings = ExtResource("3_6o7te")
autowrap_mode = 2

[node name="RestartButton" type="Button" parent="StatsContainer/StatsContainerPanel" unique_id=163722689]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.95
anchor_right = 0.01
anchor_bottom = 0.97
grow_vertical = 0
focus_neighbor_right = NodePath("../ReturnToMenuButton")
theme = ExtResource("2_5pyyf")
text = "Restart"

[node name="ReturnToMenuButton" type="Button" parent="StatsContainer/StatsContainerPanel" unique_id=521629152]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.95
anchor_top = 0.97
anchor_right = 0.99
anchor_bottom = 0.97
grow_horizontal = 0
grow_vertical = 0
focus_neighbor_left = NodePath("../RestartButton")
theme = ExtResource("2_5pyyf")
text = "Return to Menu"

[node name="ColorRect" type="ColorRect" parent="." unique_id=696575570]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[connection signal="pressed" from="StatsContainer/StatsContainerPanel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="StatsContainer/StatsContainerPanel/ReturnToMenuButton" to="." method="_on_return_to_menu_button_pressed"]
